# Crypto-MCP-Server

./: .gitignore  ASSIGNMENT_SUMMARY.md  PROJECT_DOCUMENTATION.md  README.md  pyproject.toml  requirements.txt  run_server.py
src/mcp_crypto_server/: __init__.py  cache.py  config.py  crypto_client.py  errors.py  mcp_tools.py  models.py  server.py
src/mcp_crypto_server/adapters/: __init__.py  ccxt_adapter.py
src/mcp_crypto_server/api/: __init__.py  app.py
tests/: conftest.py  test_cache.py  test_crypto_client.py  test_mcp_tools.py
