[tool.poetry]
name = "mcp-crypto-server"
version = "0.1.0"
description = "MCP-based crypto market data service (scaffold)"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10"
ccxt = "*"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
